; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_pathspec.c_test_repo_pathspec__workdir3.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_pathspec.c_test_repo_pathspec__workdir3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@str3 = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@GIT_PATHSPEC_FIND_FAILURES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"current_file\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"modified_file\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"new_file\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"staged_changes_modified_file\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"staged_delete_modified_file\00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"staged_new_file\00", align 1
@.str.6 = private unnamed_addr constant [30 x i8] c"staged_new_file_modified_file\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_pathspec__workdir3() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @str3, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @str3, align 4
  %7 = call i32 @ARRAY_SIZE(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = call i32 @git_pathspec_new(i32** %2, %struct.TYPE_3__* %1)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* @g_repo, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @git_pathspec_match_workdir(i32** %3, i32 %11, i32 0, i32* %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @git_pathspec_match_list_entrycount(i32* %15)
  %17 = call i32 @cl_assert_equal_sz(i32 7, i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @git_pathspec_match_list_free(i32* %18)
  %20 = load i32, i32* @g_repo, align 4
  %21 = load i32, i32* @GIT_PATHSPEC_FIND_FAILURES, align 4
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @git_pathspec_match_workdir(i32** %3, i32 %20, i32 %21, i32* %22)
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @git_pathspec_match_list_entrycount(i32* %25)
  %27 = call i32 @cl_assert_equal_sz(i32 7, i32 %26)
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @git_pathspec_match_list_failed_entrycount(i32* %28)
  %30 = call i32 @cl_assert_equal_sz(i32 0, i32 %29)
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @git_pathspec_match_list_entry(i32* %31, i32 0)
  %33 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %32)
  %34 = load i32*, i32** %3, align 8
  %35 = call i32 @git_pathspec_match_list_entry(i32* %34, i32 1)
  %36 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 %35)
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @git_pathspec_match_list_entry(i32* %37, i32 2)
  %39 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %38)
  %40 = load i32*, i32** %3, align 8
  %41 = call i32 @git_pathspec_match_list_entry(i32* %40, i32 3)
  %42 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0), i32 %41)
  %43 = load i32*, i32** %3, align 8
  %44 = call i32 @git_pathspec_match_list_entry(i32* %43, i32 4)
  %45 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0), i32 %44)
  %46 = load i32*, i32** %3, align 8
  %47 = call i32 @git_pathspec_match_list_entry(i32* %46, i32 5)
  %48 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i32 %47)
  %49 = load i32*, i32** %3, align 8
  %50 = call i32 @git_pathspec_match_list_entry(i32* %49, i32 6)
  %51 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.6, i64 0, i64 0), i32 %50)
  %52 = load i32*, i32** %3, align 8
  %53 = call i32 @git_pathspec_match_list_entry(i32* %52, i32 7)
  %54 = call i32 @cl_assert_equal_s(i8* null, i32 %53)
  %55 = load i32*, i32** %3, align 8
  %56 = call i32 @git_pathspec_match_list_free(i32* %55)
  %57 = load i32*, i32** %2, align 8
  %58 = call i32 @git_pathspec_free(i32* %57)
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_pathspec_new(i32**, %struct.TYPE_3__*) #1

declare dso_local i32 @git_pathspec_match_workdir(i32**, i32, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_sz(i32, i32) #1

declare dso_local i32 @git_pathspec_match_list_entrycount(i32*) #1

declare dso_local i32 @git_pathspec_match_list_free(i32*) #1

declare dso_local i32 @git_pathspec_match_list_failed_entrycount(i32*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_pathspec_match_list_entry(i32*, i32) #1

declare dso_local i32 @git_pathspec_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
